2000-05-24  Mo DeJong  <mdejong@cygnus.com>

	Have --host=sun4 automatically look for CC=sun4-cc etc.

	* acgeneral.m4 (AC_CHECK_TOOLS): New.
	* aclang.m4 (AC_PROG_CXX, AC_PROG_CC, AC_PROG_F77): Use new
	AC_CHECK_TOOLS macro instead of AC_CHECK_PROGS so that a cross
	compiler is found by default with --host.
	* doc/autoconf.texi (Generic Programs, Manual Configuration):
	Describe new AC_CHECK_TOOLS macro. Fix unclear working about
	AC_CHECK_PROGS.
	* tests/Makefile.am (FILTER_MACROS): Adjust.

2000-05-24  Akim Demaille  <akim@epita.fr>

	The night of the living dead...

	* acspecific.m4 (AC_XENIX_DIR, AC_DYNIX_SEQ, AC_IRIX_SUN,
	AC_SCO_INTL): Wake up a few zombies.
	* doc/autoconf.texi: Adjust.
	* tests/aclocal.m4 (AC_ENV_SAVE): Likewise.

2000-05-24  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_LANG_FUNC_LINK_TRY, AC_LANG_FUNC_LINK_TRY(C),
	AC_LANG_FUNC_LINK_TRY(C++)): New macros.
	(AC_CHECK_FUNC): Use it, together with AC_LINK_ELSE.

2000-05-24  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_FUNC_VFORK): Quote properly.
	(AC_FUNC_STRFTIME, AC_FUNC_VFORK, AC_FUNC_VPRINTF): Don't use
	AC_DEFINE, just use the AC_CHECK_*S macro.

2000-05-24  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (_AC_WHICH_A): Replace it with...
	(AC_SHELL_PATH_WALK): this.
	(AC_CHECK_PROG, AC_PATH_PROG): Use it.

2000-05-24  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Limitations of Builtins): Document `unset'.
	(Special Shell Variables): Adjust.
	(Shellology): New section.  Introduce bash and zsh.
	(Special Shell Variables): Some data on NULLCMD.
	(Quotation Thumb Rule): Rename as
	(Quotation Rule of Thumb): this.
	* acgeneral.m4 (AC_SHELL_UNSET): Remove.
	(AC_SHELL_UNSETENV): Rename as...
	(AC_SHELL_UNSET): this.
	(_AC_INIT_PREPARE_ENVIRONMENT): Prepare bash and zsh.
	Adjust to AC_SHELL_UNSET.

2000-05-24  Akim Demaille  <akim@epita.fr>

	The options --build etc. used to set `$build'.  *If*
	AC_CANONICAL_SYSTEM was run, then the value of `$build' given by